--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
-		"webpack": "webpack --mode development",
+		"webpack": "webpack --mode prod",
 		"webpack-dev": "webpack --mode development --watch",
 		"compile": "tsc -p ./",
 		"watch": "tsc -watch -p ./",
